<resources>
    <string name="app_name">爽哥英语</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="timeout">网络存在问题，请稍后重试</string>
    <string name="unknown_error_error_code">未知错误，错误代码</string>
    <string name="sd_card_in_not_mounted">请加成您的SD卡是否有插入</string>
    <string name="lessonResConfigErr">课程资源出错，正在为您修复，请稍后.</string>
    <string name="something_error">发生故障</string>
    <string name="please_deleted_cache_dir">权限出错，无法读取存储空间</string>
    <string name="lockTip1">该课程没有解锁</string>
    <string name="askdelete">删除?</string>
    <string name="cancel">取消</string>
    <string name="finishEn">Finish</string>
    <string name="cancelEn">Cancel</string>
    <string name="confirm">确定</string>
    <string name="ok">确定</string>
    <string name="cancel_draft">不用</string>
    <string name="askdeletemessage">永久删除这条消息?</string>
    <string name="versiontipTitle">提示</string>
    <string name="versiontip">当前版本过小 是否要更新?</string>
    <string name="versiontip2">当前版本过小 请更新</string>
    <string name="versiontip3">您当前网络不可用，请检查您的网络</string>
    <string name="versionOK">确定</string>
    <string name="versionCancel">取消</string>
    <string name="versionResTitle">提示</string>
    <string name="versionResErr">连接服务器失败，请重新启动！</string>
    <string name="versionResOk">确定</string>
    <string name="loginTitle">登 录</string>
    <string name="regsiterTitle">注 册</string>
    <string name="loginEn">Login In</string>
    <string name="loginCn">(登录)</string>
    <string name="registerEn">Sign Up</string>
    <string name="registerCn">(注册)</string>
    <string name="vister">游客</string>
    <string name="tip1Login">手机号</string>
    <string name="tip2Login">登录密码</string>
    <string name="tip3Login"></string>
    <string name="tip4Login">用户昵称</string>
    <string name="tip5Login">美联英语eme账号</string>
    <string name="forgetPwd">忘记密码?</string>
    <string name="hidePwd">隐藏密码</string>
    <string name="loginErrTip1">账号不能小于4位</string>
    <string name="loginErrTip2">密码不能小于6位</string>
    <string name="loginErrTip3">昵称不能小于3位</string>
    <string name="loginErrTip4">账号密码错误</string>
	<string name="loginErrTip5">邀请码不能小于5位</string>
    <string name="homeTip1">您还未加入任何班级</string>
    <string name="lastLessonStart">开始</string>
    <string name="normalEnLv0">初级(M0)</string>
    <string name="normalEnLv1">中级(M1)</string>
    <string name="normalEnLv2">高级(M2)</string>
    <string name="normalEnLv0Content">1 - 20课</string>
    <string name="normalEnLv1Content">21 - 44课</string>
    <string name="normalEnLv2Content">45 - 80课</string>
    <string name="levelTip1">新课程即将上线，敬请期待哟！</string>
    <string name="levelTip2">您还没有购买该课程，请后买后使用！</string>
    <string name="levelTip3">有人赠送本课程给你了，请到系统消息页面领取！</string>
    <string name="menuTitle">更 多</string>
    <string name="menuItem1">爽店</string>
    <string name="menuItem2">排行榜</string>
    <string name="menuItem3">消息通知</string>
    <string name="menuItem4">设置</string>
    <string name="menuItem5">账号绑定</string>
    <string name="menuItem6">离线下载</string>
    <string name="menuItem7">意见反馈</string>
    <string name="menuItem8">关于爽哥</string>
    <string name="menuItem9">注销</string>
    <string name="menuItem1En">Home</string>
    <string name="menuItem1Cn">主页</string>
    <string name="menuItem2En">My profile</string>
    <string name="menuItem2Cn">我的信息</string>
    <string name="menuItem3En">Class</string>
    <string name="menuItem3Cn">班级</string>
    <string name="menuItem4En">Rankings</string>
    <string name="menuItem4Cn">排行榜</string>
    <string name="menuItem5En">Messages</string>
    <string name="menuItem5Cn">系统信息</string>
    <string name="menuItem6En">Downloads</string>
    <string name="menuItem6Cn">课程下载</string>
    <string name="menuItem7En">Link Account</string>
    <string name="menuItem7Cn">账号绑定</string>
    <string name="menuItem8En">Contact us</string>
    <string name="menuItem8Cn">意见反馈</string>
    <string name="menuItem9En">About us</string>
    <string name="menuItem9Cn">关于爽哥</string>
    <string name="menuItem10En">Settings</string>
    <string name="menuItem10Cn">设置</string>
    <string name="menuItem11En">Logout</string>
    <string name="menuItem11Cn">注销</string>
    <string name="menuItem12En">Personal Message</string>
    <string name="menuItem12Cn">私信</string>
    <string name="menuItem14En">Store</string>
    <string name="menuItem14Cn">商城</string>
    <string name="menuItem16En">more</string>
    <string name="menuItem16Cn">更多</string>
    <string name="menuItem15En">Invite</string>
    <string name="menuItem15Cn">邀请好友</string>
    <string name="menuTip1En">Are you sure you want to exit?</string>
    <string name="menuTip1Cn">(您确定要退出吗)</string>
    <string name="userInfoEdit">编辑</string>
    <string name="userInfoEditTitleEn">Editing Profile</string>
    <string name="userInfoEditTitleCn">(编辑个人资料)</string>
    <string name="userInfoTip1">个人签名:</string>
    <string name="userInfoTip2">所在地:</string>
    <string name="userInfoTip3En">Class</string>
    <string name="userInfoTip3Cn">(班级)</string>
    <string name="userInfoTip4En">Occupation</string>
    <string name="userInfoTip4Cn">(职业)</string>
    <string name="userInfoTip5En">Income</string>
    <string name="userInfoTip5Cn">(收入)</string>
    <string name="userInfoTip6En">Hobbies</string>
    <string name="userInfoTip6Cn">(兴趣爱好)</string>
    <string name="userInfoTip7">编辑</string>
    <string name="userInfoTip8">编辑</string>
    <string name="userInfoEditTip1">昵称</string>
    <string name="userInfoEditTip2">账号</string>
    <string name="userInfoEditTip3">性别</string>
    <string name="userInfoEditTip4">年龄</string>
    <string name="userInfoEditTip5">个性签名</string>
    <string name="userInfoEditTip6">感情状态</string>
    <string name="userInfoEditTip7">收入</string>
    <string name="userInfoEditTip8">职业</string>
    <string name="userInfoEditTip9">所在地</string>
    <string name="userInfoEditTip10">兴趣爱好</string>
    <string name="userInfoEditDialogTip3">性别</string>
    <string name="userInfoEditDialogTip4">年龄</string>
    <string name="userInfoEditDialogTip6">情感状态</string>
    <string name="userInfoEditDialogTip7">收入</string>
    <string name="userInfoEditDialogTip8">职业</string>
    <string name="userInfoEditDialogTip9">所在地</string>
    <string name="userInfoEditDialogTip10">兴趣爱好</string>
    <string name="userInfoEditVistorErr">您目前是游客，请补全账号信息！</string>
    <string name="userInfoTip9">发私信</string>
    <string name="userInfoTip10">邀请加入班级</string>
    <string name="userInfoTip11">关注</string>
    <string name="userInfoTip12">加入黑名单</string>
	<string name="userInfoTip13">取消黑名单</string>
	<string name="userInfoTip14En">Coins</string>
    <string name="userInfoTip14Cn">(金币)</string>
    <string name="interestTitleEn">Interest</string>
    <string name="interestTitleCn">(兴趣爱好)</string>
    <string name="attetion">关注</string>
    <string name="attetionCancel">取消关注</string>
    <string name="attetionSuccessTip">关注成功</string>
    <string name="attetionCancelSuccessTip">取消关注成功</string>
    <string name="attetionMsgEn">After the attention can send messages, do you pay attention?</string>
	<string name="attetionMsgCn">关注后即可发送消息，是否关注?</string>
    <string name="userRanklist">个人积分总排行榜</string>
    <string name="noRanking">未上榜</string>
    <string name="classTitle">班级</string>
    <string name="classHomeTitleEn">Class</string>
    <string name="classHomeTitleCn">(班级)</string>
    <string name="classHomeTip1En">Weekly Ranking</string>
    <string name="classHomeTip1Cn">(本周排名)</string>
    <string name="classHomeTip2En">Weekly Score</string>
    <string name="classHomeTip2Cn">(本周得分)</string>
    <string name="classHomeTip3En">Invite Members</string>
    <string name="classHomeTip3Cn">(邀请成员)</string>
    <string name="classHomeTip4En">Join Class</string>
    <string name="classHomeTip4Cn">(加入班级)</string>
    <string name="classHomeTip5En">Post</string>
    <string name="classHomeTip5Cn">(班级贴)</string>
    <string name="classHomeTip6En">Write New Post</string>
    <string name="classHomeTip6Cn">(发帖)</string>
    <string name="classMsg">消息</string>
    <string name="classSearch">Search</string>
    <string name="classSearchTitleEn">Search</string>
    <string name="classSearchTitleCn">(班级搜索)</string>
    <string name="classSearchErrTip1">班级名称不能少于2个字符</string>
    <string name="classSearchTip">Search class</string>
    <string name="classDetailsTitleEn">Class Details</string>
    <string name="classDetailsTitleCn">(班级详情)</string>
    <string name="classSetupTip1">编辑班级资料</string>
    <string name="classSetupTip2">管理班级成员</string>
    <string name="classSetupTip3">邀请新成员</string>
    <string name="classSetupTip4">管理班级发布帖</string>
    <string name="classEditTitle">编辑班级资料</string>
    <string name="classEditTip1">所在城市</string>
    <string name="classEditTip2">班级名称</string>
    <string name="classEditTip3">班级签名</string>
    <string name="classEditTip4">班级介绍</string>
    <string name="classEditTip5">班长微信</string>
    <string name="classEditTip6">班级加入权限</string>
    <string name="classInviteTitleEn">Invite Members</string>
    <string name="classInviteTitleCn">(邀请新成员)</string>
    <string name="classMemberTitleEn">Members</string>
    <string name="classMemberTitleCn">(成员)</string>
    <string name="classMemberEditTitle">班级成员管理</string>
    <string name="classInviteSearch">Search user</string>
    <string name="classInviteBaseTitle1">邀请好友</string>
    <string name="classInviteBaseTitle2">分享</string>
    <string name="classInviteTip1">爽哥用户</string>
    <string name="classInviteTip2">QQ好友</string>
    <string name="classInviteTip3">微信好友</string>
    <string name="classInviteTip4">微信朋友圈</string>
    <string name="classInvite">邀请</string>
    <string name="classInviteErrTip1">邀请名称不能少于2个字符</string>
    <string name="classHomeTip1">成员:</string>
    <string name="classHomeTip2">本周积分:</string>
    <string name="classHomeTip3">本周排行:</string>
    <string name="classHomeTip4">班级介绍:</string>
    <string name="classMemberEditTip1En">Make Admin</string>
    <string name="classMemberEditTip1Cn">(设置班长)</string>
    <string name="classMemberEditTip2En">Remove Admin</string>
    <string name="classMemberEditTip2Cn">(移除班长)</string>
    <string name="classMemberEditTip3En">Remove</string>
    <string name="classMemberEditTip3Cn">(移除成员)</string>
    <string name="classMemberEditTip4En">Profile</string>
    <string name="classMemberEditTip4Cn">(个人详情)</string>
    <string name="aboutTitleEn">About Us</string>
    <string name="aboutTitleCn">(关于爽哥)</string>
    <string name="aboutContent1"><![CDATA[爽哥英语是一款融合颠覆式教学理念和尖端语音评测技术的英语学习应用，通过情景化学习模式练习英语听说和阅读，引入了班级社群学习概念，每天体验真人口语对练和结伴学习的乐趣，更有无限的奖励机制，激发你的英语学习欲望，让你轻轻松松爱上飚英语。]]></string>
    <string name="aboutContent2"><![CDATA[联系我们:\n微信公众号：shuanggeen\n新浪微博:@爽哥英语]]></string>
    <string name="aboutContent3"><![CDATA[爽哥微信:shuangge8（点击可复制）]]></string>
    <string name="aboutContent4"><![CDATA[（欢迎给我们提出任何有关产品的建议，我们会非常重视您的宝贵建议，并及时回复您。）]]></string>
    <string name="aboutContent5"><![CDATA[爽哥英语 版权所有]]></string>
    <string name="aboutContent6"><![CDATA[QQ群:979903495（点击可加入）]]></string>
    <string name="setlevelTitleEn">Please select your English level objectively.</string>
    <string name="setlevelTitleCn">(请务必客观的选择您的英语水平)</string>
    <string name="setlevelTip1En">None</string>
    <string name="setlevelTip11En">I don\'t know any Enlgish yet</string>
    <string name="setlevelTip1Cn">(差)</string>
    <string name="setlevelTip2En">Beginner</string>
    <string name="setlevelTip12En">I only know a few English words</string>
    <string name="setlevelTip2Cn">(不好)</string>
    <string name="setlevelTip3En">Intermediate</string>
    <string name="setlevelTip13En">I can have a short conversation</string>
    <string name="setlevelTip3Cn">(一般)</string>
    <string name="setlevelTip4En">Advanced</string>
    <string name="setlevelTip14En">I can have a long conversation</string>
    <string name="setlevelTip4Cn">(好)</string>
</resources>