<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titlebar="http://schemas.android.com/apk/res/air.com.shuangge.phone.ShuangEnglish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <com.shuangge.english.view.component.ComponentTitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        titlebar:titleStrCn="@string/aboutTitleCn"
        titlebar:titleStrEn="@string/aboutTitleEn"
        titlebar:titleTheme="1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/aboutContent1"
                android:textColor="@color/default_content"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/aboutContent2"
                android:textColor="@color/default_content"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/aboutContent3"
                android:textColor="@color/default_green"
                android:textSize="14dp" />
            <TextView
                android:id="@+id/txtQQ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/aboutContent6"
                android:textColor="@color/default_green"
                android:visibility="gone"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/aboutContent4"
                android:textColor="@color/default_content"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/aboutContent5"
                android:textColor="@color/default_content"
                android:textSize="14dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>